# collapse-lv2

./: CMakeLists.txt  README.md  cmake_uninstall.cmake.in  install.sh  manifest.ttl  wfc-synth.md  wfc.ttl
src/: wfc.cpp
